removed full paths and created requirements file

--- a/analysis/compare_methods.ipynb
+++ b/analysis/compare_methods.ipynb
@@ -19,7 +19,7 @@
     "import os\n",
     "\n",
     "# Path to clusTCR repo goes here:\n",
-    "os.chdir('/home/sebastiaan/PhD/Repositories/clusTCR/')"
+    ""
    ]
   },
   {
@@ -98,14 +98,14 @@
       "Clustering 26679 sequences with GLIPH2.\n",
       "Elapsed time: 53.947280406951904 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/GLIPH2_26679.tsv\n"
+      " --> data/methods/GLIPH2_26679.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -119,19 +119,19 @@
       "Clustering 24981 sequences with iSMART.\n",
       "Elapsed time: 27.477491855621338 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/iSMART_24981.tsv\n"
+      " --> data/methods/iSMART_24981.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self.gt.drop_duplicates(inplace=True)\n",
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -145,14 +145,14 @@
       "Clustering 3403 sequences with GLIPH2.\n",
       "Elapsed time: 5.1609227657318115 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/GLIPH2_3403.tsv\n"
+      " --> data/methods/GLIPH2_3403.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -166,19 +166,19 @@
       "Clustering 2851 sequences with iSMART.\n",
       "Elapsed time: 0.9944150447845459 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/iSMART_2851.tsv\n"
+      " --> data/methods/iSMART_2851.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self.gt.drop_duplicates(inplace=True)\n",
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -196,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -210,14 +210,14 @@
       "Clustering 594 sequences with GLIPH2.\n",
       "Elapsed time: 2.613055944442749 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/GLIPH2_594.tsv\n"
+      " --> data/methods/GLIPH2_594.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -231,19 +231,19 @@
       "Clustering 495 sequences with iSMART.\n",
       "Elapsed time: 0.28023242950439453 seconds.\n",
       "Saving output to: \n",
-      " --> /home/sebastiaan/PhD/Repositories/clusTCR/data/methods/iSMART_495.tsv\n"
+      " --> data/methods/iSMART_495.tsv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self.gt.drop_duplicates(inplace=True)\n",
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -261,7 +261,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebastiaan/PhD/Repositories/clusTCR/src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
+      "src/clusTCR/clusTCR.py:365: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
